# qnet-no

./: API.md  DEPLOYMENT.md  Dockerfile  README.md  RESEARCH.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  structural_validation.py  validate_algorithms.py
examples/: advanced_examples.py  quickstart_demo.py  scaling_demonstration.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
monitoring/: alert_rules.yml  prometheus.yml
qnet_no/: __init__.py  cli.py
qnet_no/algorithms/: __init__.py  hybrid_scheduling.py
qnet_no/backends/: __init__.py  base_backend.py  nv_center_backend.py  photonic_backend.py  simulator_backend.py
qnet_no/datasets/: __init__.py  pde_datasets.py  synthetic_data.py
qnet_no/monitoring/: dashboard.py
qnet_no/networks/: __init__.py  entanglement_scheduler.py  photonic_network.py  tensor_contractor.py
qnet_no/operators/: __init__.py  hybrid_operator.py  quantum_deeponet.py  quantum_fno.py
qnet_no/utils/: __init__.py  classical_layers.py  distributed.py  error_handling.py  globalization.py  logging_config.py  metrics.py  performance.py  quantum_encoding.py  quantum_fourier.py  tensor_ops.py  validation.py
research/: experimental_framework.py  validation_study.py
scripts/: deploy.sh
tests/: test_basic_functionality.py  test_hybrid_scheduling.py
